--- a/index.html
+++ b/index.html
@@ -5,31 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wheather App</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="Weather_Images/clear.png" />
+    <link rel="shortcut icon" href="https://vardaansharma18.github.io/Weather_App/clear.png" />
   </head>
   <body>
     <div class="card">
       <div class="search">
         <input type="text" placeholder="Enter city name" spellcheck="false" />
-        <button><img src="Weather_Images/search.png" alt="" /></button>
+        <button><img src="https://vardaansharma18.github.io/Weather_App/search.png" alt="" /></button>
       </div>
       <div class="error">
         <p>Invalid city name.</p>
       </div>
       <div class="weather">
-        <img src="Weather_Images/rain.png" class="weather-icon" alt="" />
+        <img src="https://vardaansharma18.github.io/Weather_App/rain.png" class="weather-icon" alt="" />
         <h1 class="temp">22*C</h1>
         <h2 class="city">New York</h2>
         <div class="details">
           <div class="col">
-            <img src="Weather_Images/humidity.png" alt="" />
+            <img src="https://vardaansharma18.github.io/Weather_App/humidity.png" alt="" />
             <div>
               <p class="humidity">50%</p>
               <p>humidity</p>
             </div>
           </div>
           <div class="col">
-            <img src="Weather_Images/wind.png" alt="" />
+            <img src="https://vardaansharma18.github.io/Weather_App/wind.png" alt="" />
             <div>
               <p class="wind">15 km/h</p>
               <p>Wind speed</p>
